/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-10-17 11:48 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * contrib/hbzlib/zip.c
    ! restored current drive in HB_UNZIPFILE (thanks to Saulius)

2013-10-16 10:15 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/common/hbdate.c
    ! fixed hb_dateTime() function to return millisecond (thanks to Saulius)

2013-09-13 14:20 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * source/tip/client.prg
    contrib/tipssl/client.prg
     ! minor fix for this morning commit
     
2013-09-03 10:30 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * source/tip/client.prg
    contrib/tipssl/client.prg
    * fixed read method to allow long http response
  * contrib/tipssl/httpcln.prg
    * change to allow Connection: field in http header allow other values then close
    
2013-08-21 10:00 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * source/tip/sendmail.prg
    ! changes for blind carbon copy and speedup read results from smtp server responses

2013-07-05 13:10 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * xharbour.spec
   bin/pack_src.sh
    ! fixes to build libmisc.a 
    
2013-06-23 21:50 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/tip/sendmail.prg
    ! fixed wrong variable name

2013-06-23 01:30 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * source/tip/mail.prg
  * source/tip/sendmail.prg
  * contrib/tipssl/mail.prg
  * contrib/tipssl/sendmail.prg
   ! added new mime types to list of encoding

2013-06-21 12:57 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * source/pp/ppgen.c
    * Unused variables warning
    
2013-06-20 12:26 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * source/compiler/comptool.c