@@ -8,6 +8,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2013-10-30 23:17 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
+  * source/rtl/minmax.c
+    ! fixed MAX() and MIN() functions to work with datetime
+
 2013-10-17 11:48 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
   * contrib/hbzlib/zip.c
     ! restored current drive in HB_UNZIPFILE (thanks to Saulius)
